# CSE-446

./: .venv
hw0/: tasks.py
hw0/homeworks/clt_with_cdfs/: clt_with_cdfs.py
hw0/homeworks/vanilla_vs_numpy/: vanilla_vs_numpy.py
hw1-A/: pyproject.toml
hw1-A/homeworks/poly_regression/: plot_polyreg_univariate.py  polyreg.py
hw1-A/homeworks/ridge_regression_mnist/: ridge_regression.py
hw2-A/: README.md
hw2-A/homeworks/lasso/: ISTA.py  crime_data_lasso.py
hw3-A/homeworks/: __init__.py
hw3-A/homeworks/intro_pytorch/: crossentropy_search.py  mean_squared_error_search.py
hw3-A/homeworks/kernel_bootstrap/: main.py
